# riad-concierge-agent

./: .coverage  .env.example  .env.test  AGENTS.md  README.md  coverage.json  pyproject.toml  requirements.txt  simple_test_results.json  test_report.json
app/: main.py
app/agents/: riad_agent.py
app/api/: routes.py
app/core/: config.py  database.py  redis_client.py
app/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
app/models/: agent_state.py  instructor_models.py
app/services/: agent_service.py  analytics_service.py  cultural_service.py  guest_service.py  knowledge_service.py  pms_service.py  proactive_service.py  whatsapp_service.py
app/utils/: __init__.py  logger.py  mock_dependencies.py
docs/: DEPENDENCY_SETUP.md  PRODUCTION_READINESS_CHECKLIST.md  TESTING_STRATEGY.md
scripts/: run_tests.py  simple_test_runner.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_agent_workflow.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: test_cultural_service.py  test_whatsapp_service.py
